--- a/src/css/group.css
+++ b/src/css/group.css
@@ -12,3 +12,21 @@
     padding: 10px;
     font-size: 35px;
 }
+
+#add:link, #add:visited {
+    background-color: white;
+    color: black;
+    padding: 14px 25px;
+    margin-top: 2%;
+    margin-left: 42%;
+    border: 2px solid green;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bold;
+}
+
+#add:hover, #add:active {
+    background-color: lightgreen;
+    color: white;
+}
